--- a/npm/packages/form/src/components/atoms/radio-group/styles.scss
+++ b/npm/packages/form/src/components/atoms/radio-group/styles.scss
@@ -1,4 +1,4 @@
-@import '../../../utils/variables';
+@import '~@helsenorge/toolkit/utils/variables';
 
 /******** RESET *********/
 input[type='radio'] {
