--- a/npm/packages/form/src/components/atoms/safe-input-field/styles.scss
+++ b/npm/packages/form/src/components/atoms/safe-input-field/styles.scss
@@ -1,7 +1,7 @@
 @import '~@helsenorge/designsystem-react/scss/_spacers.scss';
 @import '~@helsenorge/designsystem-react/scss/_breakpoints.scss';
 @import '~@helsenorge/designsystem-react/scss/_palette.scss';
-@import '../../../utils/variables';
+@import '~@helsenorge/toolkit/utils/variables';
 
 $paddingX: 1.125rem;
 $extraWidth: 0.75rem;
