--- a/npm/packages/form/src/components/atoms/safe-select/styles.scss
+++ b/npm/packages/form/src/components/atoms/safe-select/styles.scss
@@ -1,5 +1,5 @@
 @import '~@helsenorge/designsystem-react/scss/_palette.scss';
-@import '../../../utils/variables';
+@import '~@helsenorge/toolkit/utils/variables';
 
 .atom_select {
   position: relative;
