--- a/npm/packages/form/src/components/atoms/safe-textarea/styles.module.scss
+++ b/npm/packages/form/src/components/atoms/safe-textarea/styles.module.scss
@@ -2,7 +2,7 @@
 @import '~@helsenorge/designsystem-react/scss/_breakpoints.scss';
 @import '~@helsenorge/designsystem-react/scss/_palette.scss';
 @import '~bootstrap/scss/mixins/_screen-reader.scss';
-@import '../../../utils/variables';
+@import '~@helsenorge/toolkit/utils/variables';
 
 /*** RESET ***/
 textarea:required {
