--- a/npm/packages/form/src/components/safe-select/styles.scss
+++ b/npm/packages/form/src/components/safe-select/styles.scss
@@ -10,7 +10,7 @@
     content: '';
     height: 1rem;
     width: 1rem;
-    background: url('./../../../img/icons/nav_arrow_down_black.svg') no-repeat center;
+    background: url('./../../img/icons/nav_arrow_down_black.svg') no-repeat center;
     background-size: contain;
     position: absolute;
     top: calc(50% - 7px);
